# Battery-DeepRL-Dispatcher

./: .gitignore  GUIDE.md  LICENSE  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  Real_Life_Fixes.txt  pyproject.toml  requirements.txt
changes/: changes_december.txt  changes_tuesday7.txt
changes/td-train-example/: changes_friday10.txt  changes_friday7.txt  changes_friday8.txt  changes_friday9.txt  changes_monday1.txt  changes_monday2.txt  changes_monday3.txt  changes_monday4.txt  changes_monday_noecon.txt  changes_shaping_only.txt
config/: features.yaml  limits.yaml  training.yaml
data/processed/: merged_training_data.parquet  normalization_params.yaml  training_features.parquet  training_features_normalized.parquet  training_features_normalized_test.parquet  training_features_normalized_train.parquet
notebooks/: 01_activation_data_exploration.ipynb  01_day_ahead_data_exploration.ipynb  01_production_data.ipynb  01_reserve_data_exploration.ipynb  02_feature_engineering.ipynb  AFRR_capacity_revenue.ipynb  ActivationPriceXML.txt  Reserve Balance XML Example.txt  day_ahead_montel.ipynb  pv_generation_realistic.py
old_results/: comprehensive_evaluation.csv  evaluation_summary.json  hourly_data.csv
old_results/logs_v4/: td3_nonlinear_norm_qe.csv
old_results/old_logs_v2/: td3_nonlinear.csv
old_results/old_logs_v3/: td3_nonlinear.csv
old_results/old_results_v1/: comprehensive_evaluation.csv  evaluation_summary.json  hourly_data.csv
old_results/simple_spread/: hourly_ep0400.csv  hourly_ep0500.csv  hourly_ep0600.csv  hourly_ep0700.csv  hourly_ep0800.csv  hourly_ep0900.csv
old_results/simple_spread_v2/: hourly_ep0200.csv  hourly_ep0300.csv  hourly_ep0400.csv  hourly_ep0500.csv  hourly_ep0600.csv  hourly_ep0700.csv  hourly_ep0800.csv
old_results/td3_diag2/: hourly_ep0100.csv  hourly_ep0200.csv  hourly_ep0300.csv  hourly_ep0400.csv
old_results/td3_diag3/: hourly_ep0100.csv  hourly_ep0200.csv  hourly_ep0300.csv  hourly_ep0400.csv
old_results/td3_diag4/: hourly_ep0100.csv  hourly_ep0200.csv  hourly_ep0300.csv  hourly_ep0400.csv
old_results/td3_diag5/: hourly_ep0100.csv  hourly_ep0200.csv  hourly_ep0300.csv  hourly_ep0400.csv
old_results/td3_diag6/: hourly_ep0100.csv  hourly_ep0200.csv  hourly_ep0300.csv  hourly_ep0400.csv
old_results/td3_diag7/: hourly_ep0400.csv
old_results/td3_e100/: hourly_ep0100.csv  hourly_ep0200.csv  hourly_ep0300.csv  hourly_ep0500.csv  hourly_ep0600.csv  hourly_ep0700.csv  hourly_ep0800.csv  hourly_ep0900.csv  hourly_ep1000.csv  hourly_ep1100.csv  hourly_ep1200.csv  hourly_ep1300.csv  hourly_ep1400.csv  hourly_ep1500.csv  hourly_ep1600.csv  hourly_ep1700.csv  hourly_ep1800.csv  hourly_ep1900.csv  hourly_ep2000.csv  hourly_ep2100.csv  hourly_ep2200.csv
old_results/td3_e12/: hourly_ep0200.csv  hourly_ep0300.csv  hourly_ep0500.csv  hourly_ep0600.csv  hourly_ep0700.csv  hourly_ep0800.csv  hourly_ep1100.csv
old_results/td3_econ/: hourly_ep0200.csv  hourly_ep0300.csv  (+2 more)
scripts/: eval_baselines.py  eval_comprehensive.py  test_reward_scenarios.py  train_td3.py  visualize_results.py
src/: __init__.py
tests/: test_env_basic.py  test_quick.py  tests_sanity.py
(+572 files in other folders)
