[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pv-bess-td3"
version = "0.1.0"
description = "Intelligent battery storage optimization for Hungarian electricity markets using TD3-LSTM reinforcement learning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PV-BESS TD3 Team"}
]
keywords = [
    "reinforcement-learning",
    "battery-storage",
    "energy-optimization",
    "td3",
    "lstm",
    "electricity-markets",
    "renewable-energy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "tianshou>=0.5.1",
    "gymnasium>=0.29.1",
    "numpy>=1.24.3",
    "pandas>=2.1.1",
    "scipy>=1.11.3",
    "hydra-core>=1.3.2",
    "pydantic>=2.4.2",
    "pyyaml>=6.0.1",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "pyarrow>=13.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "isort>=5.12.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.2",
    "ipywidgets>=8.1.1",
]

[project.urls]
Homepage = "https://github.com/yourusername/pv-bess-td3"
Repository = "https://github.com/yourusername/pv-bess-td3"
Documentation = "https://github.com/yourusername/pv-bess-td3/wiki"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "tianshou.*",
    "gymnasium.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
